# Dirt

./: BUGS.md  CHANGELOG.md  LICENSE  README.md  bridge_memory.json  heritage_context.json  mcp_config.json  pyproject.toml
.github/workflows/: ci.yml
app/: heuristics.py  main.py  mcp_cli.py  mcp_client.py  ollama_adapter.py  test_mcp_client.py
app/static/: index.html  script.js  style.css
app/tests/: test_app.py
tests/: test_ollama_adapter.py
