[project]
name = "dirt"
version = "2.3.0"
description = "Pluggable Chat and MCP Client System with Environment Variables and STDIO Compatibility"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "ollama>=0.1.0"
]

[project.scripts]
dirt-api = "app.main:run"
dirt-mcp = "app.mcp_cli:main"

[tool.hatch.build]
include = [
    "app",
    "README.md",
    "LICENSE",
    "mcp_config.json",
    "bridge_memory.json",
    "heritage_context.json"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "README.md", "LICENSE", "mcp_config.json", "bridge_memory.json", "heritage_context.json"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"